--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home_hint_player_one">player one</string>
     <string name="home_hint_player_two">player two</string>
+    <string name="game_vs">VS</string>
+    <string name="game_page_deck">Deck</string>
+    <string name="game_page_discard">Discard</string>
+    <string name="game_hint_validate">Validate</string>
+    <string name="game_btn_reset">Reset</string>
+    <string name="game_btn_lay_down_card">Lay down card</string>
+    <string name="congrats_winner">winner is %s</string>
+    <string name="congrats_btn_new_game">New Game</string>
 </resources>
